Fix header h2 font-size on small screens, was overflowing header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,7 +240,7 @@ footer i:hover, footer a:hover, footer a:hover i {
         font-size: 1.5rem;
     }
     header h2 {
-        font-size: 1.4rem;
+        font-size: 1rem;
     }
     .bush {
         
